# CornStudy

./: .cursorignore  .gitignore  AGENTS.md  CLAUDE.md  Etude.md  Makefile  README.md  audit_refonte_mais_be41a1c9.plan.md  pyproject.toml
.ai/: ARCHITECTURE_EMA_PRO.md  CODEX.md  IDEAS.md  PROJECT.md  QUALITY.md  REFLEXION_AMELIORATION_INDICATEUR.md  REFLEXION_COMPLETE.md  REFLEXION_CONTRATS_EMA.md  REFLEXION_ETUDE_COMPLETE.md  REFLEXION_PHASE2_EMA.md  REFLEXION_SUITE_ETUDE.md  STATE.md  TICKETS.md  TICKETS_EMA.md  TICKETS_ETUDE_EMA.md  TICKETS_ETUDE_EMA_PHASE2.md  TICKETS_INDICATEUR.md  TICKETS_RD.md  TICKETS_RD_V8.md  TICKETS_SUITE_ETUDE.md  TICKETS_V10.md  TICKETS_V11.md  TICKETS_V12.md  TICKETS_V13.md  TICKETS_V14.md  TICKETS_V15.md  TICKETS_V16.md  TICKETS_V17.md  TICKETS_V18_LIT.md  TICKETS_V19_CBOT_WEATHER.md  TICKETS_V22_LIVE.md  TICKETS_V23.md  TICKETS_V24.md  TICKETS_V25_V26.md  TICKETS_V27_V29.md  TICKETS_V3.md  TICKETS_V31_V36.md  TICKETS_V7.md  TICKETS_V9.md
artefacts/: README.md
config/: cbot_sale_score.yaml  decision.yaml  euronext_indicator.yaml  factor_metadata.yaml  features.yaml  indicator.yaml  models.yaml  sources.yaml
data/: README.md
docs/: 00_PROJET_COMPLET_MAIS.md  ACQUISITION_PACKAGE.md  ADVERSE_CASEBOOK.md  ADVERSE_CASEBOOK_ENRICHED.md  AGRO_INDICATOR.md  ANTI_LEAKAGE.md  ARBRE_ETUDE.md  ARCHITECTURE.md  AUDIT_COMPLET_V3.md  AUDIT_CONTINUATION_ETUDE_MAIS.md  AUDIT_REPORT.md  BENCHMARK_CANONICAL.md  BENCHMARK_SUITE.md  CAUSAL_MAP_CORN_MARKET.md  CBOT_CROSS_MARKET_V6.md  CROSS_TARGET_OOF_V6.md  DATA_EU_01_EC_MARS.md  DATA_EU_02_OPENMETEO.md  DATA_EU_03_FRANCEAGRIMER.md  DATA_EU_04_ETS_CO2.md  DATA_SOURCES_MAIS_CBOT_EURONEXT_V8.md  DATA_SOURCING_PLAN.md  DATA_WORLD_01_WASDE_EU.md  DECISION_NEXT_STEPS_AFTER_V30.md  DECISION_RECHERCHE_MAIS_V8.md  DIRECTION.md  EMA_00_PROJECT_OVERVIEW.md  EMA_01_DATA_AUDIT.md  EMA_02_CONTRACTS_ROLLS.md  EMA_03_CONTINUOUS_SERIES.md  EMA_04_CBOT_COINTEGRATION.md  EMA_05_RETURN_DECOMPOSITION.md  EMA_06_RESIDUAL_STUDY.md  EMA_07_BASIS_FORMAL.md  (+189 more)
(+1278 files in other folders)
